<resources>
    <string name="app_name">Hangloose</string>
    <string name="facebook_app_id">570529616729330</string>
    <string name="fb_login_protocol_scheme">fb570529616729330</string>
    <string name="SHA1">CF:5F:B2:B8:94:33:7D:D6:34:98:52:7B:34:B3:2F:0C:7B:DD:96:12</string>
    <string name="server_client_id">430634342873-unvagf3q4qkttp8jgoksj8vnj2gv2kh3.apps.googleusercontent.com</string>
    <string name="client_secret">Ux2SShMhe6AFaRmKh2IVihOA</string>
    <string name="Web_client_id">430634342873-unvagf3q4qkttp8jgoksj8vnj2gv2kh3.apps.googleusercontent.com</string>
    <string name="your_phone">Your Phone</string>
    <string name="your_location">Your Location</string>
    <string name="btn_logout_from_google">Sign Out</string>
    <string name="no_network_connectivity">No network available. Please try again!</string>
    <string name="hangloose">Hang Loose</string>
    <string name="sign_in_with_social">Sign In with social</string>
    <string name="have_it_your_way">Have it your way</string>
    <string name="or">or</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="close">Close</string>
    <string name="already_have_an_account">Already have an account? SignIn</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_started_with_social">Get Started with Social</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_msg">SMS verification code has been sent to:</string>
    <string name="otp">OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="enter_your_registered_number">Please, enter your registered phone number</string>
    <string name="next">Next</string>
    <string name="enter_phone_and_password">Phone number or passsword cannot be empty</string>
    <string name="country_code">+91</string>
    <string name="key_otp_recognize">KEY_OTP_RECOGNIZE</string>
    <string name="key_mobile_no">KEY_MOBILE_NO</string>
    <string name="user_registration_msg">User registration successful</string>
    <string name="user_login_msg">User login successful</string>
    <string name="permission">Permission</string>
    <string name="enable">ENABLE</string>
    <string name="select_your_activities">Select Your Activities</string>
    <string name="explore">Explore</string>
    <string name="select_your_adventure">Select Your Adventure</string>
    <string name="filter">Filters</string>
    <string name="title_activity_location_maps">Map</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_place">Restaurant Place</string>
    <string name="ratings">Ratings</string>
    <string name="rating_value">4.3</string>
    <string name="opens">Opens</string>
    <string name="time">10 AM to 11 PM</string>
    <string name="charges">Charges</string>
    <string name="charges_value">₹ 1000 for 2 (Approx)</string>
    <string name="category_value">Dining - Music - Dance</string>
    <string name="veg">Veg</string>
    <string name="nonveg">Non-Veg</string>
    <string name="offers_with_reservation_title">Offers in Detail</string>
    <string name="offers_with_reservation_subtitle">Terms and Conditions applied*</string>
    <string name="offer_on_total_bill">20% Off Total Bill</string>
    <string name="addon_offers">+2 Add-On Offers</string>
    <string name="available_now">Available Now</string>
    <string name="offer_availed">Offer availed 70 times</string>
    <string name="select_offer">Select Offer</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="about_dummy">Lorem Ipsum is simple dummy text Wikipedia A white sphere made of large jigsaw pieces,
        with letters from several alphabets shown on the pieces Wikipedia wordmark The logo of Wikipedia, a globe
        featuring glyphs from several writing systems Screenshot Type of site Online encyclopedia</string>
    <string name="tags">Tags</string>
    <string name="address">Address</string>
    <string name="address_dummy">Abc, \n Pune, Maharashtra</string>
    <string name="contact">Contact</string>
    <string name="check_availability">Check Availability</string>
    <string name="action_search">Search</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="music">Music</string>
    <string name="live">Live</string>
    <string name="soft">Soft</string>
    <string name="live_instrument">Live Instrument</string>
    <string name="comedy">Comedy</string>
    <string name="live_comedy_show">Live Comedy Show</string>
    <string name="open_mic">Open Mic</string>
    <string name="dining">Dining</string>
    <string name="fancy">Fancy</string>
    <string name="casual">Casual</string>
    <string name="daba_style">Daba Style</string>
    <string name="something_casual">Something Casual</string>
    <string name="something_new">Something New</string>
    <string name="new_dish">New Dish</string>
    <string name="new_town">New Town</string>
    <string name="features">Features</string>
    <string name="hookah">Hookah</string>
    <string name="hookah_bar"><![CDATA[Hookah & Bar]]></string>
    <string name="bar">Bar</string>
    <string name="discount">Discount</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="call">Call</string>
    <string name="minDiscount">0&#37;</string>
    <string name="maxDiscount">100&#37;</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="queries_suggestions">Queries &amp; Suggestions</string>
    <string name="queries">Queries</string>
    <string name="email">Email-ID</string>
    <string name="username">Username</string>
    <string name="suggestions">Suggestions</string>
    <string name="send">Send</string>
</resources>