<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <import type="android.view.View"/>

        <variable
                name="clickHandler"
                type="com.hangloose.ui.activities.ForgotPasswordActivity"/>
    </data>

<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_background"
        tools:context="com.hangloose.ui.activities.ForgotPasswordActivity">

    <TextView
            android:text="@string/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="80dp"
            style="@style/text20"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/close"
            android:onClick="@{clickHandler::onCloseClick}"/>

    <TextView
            android:text="@string/enter_your_registered_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="15dp"
            />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginTop="32dp">

        <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/ic_x"
                android:hint="@string/your_phone"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>

    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="@android:color/white"
            android:background="@color/colorSignInBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>
</layout>