<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="consumerViewModel"
            type="com.hangloose.viewmodel.ConsumerViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="com.hangloose.ui.activities.SignInActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/hangloose"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />

        <TextView
            android:id="@+id/textView"
            style="@style/text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="200dp"
            android:text="@string/sign_in_with_social"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnFacebook"
            android:layout_width="133dp"
            android:layout_height="58dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="232dp"
            android:contentDescription="@string/facebook"
            android:src="@drawable/ic_facebook"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnGoogle"
            android:layout_width="133dp"
            android:layout_height="58dp"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_google" />

        <View
            android:id="@+id/view"
            android:layout_width="118dp"
            android:layout_height="1dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="312dp"
            android:background="@color/colorSeperator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="8dp"
            android:text="@string/or"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="118dp"
            android:layout_height="1dp"
            android:layout_marginTop="312dp"
            android:layout_marginEnd="40dp"
            android:background="@color/colorSeperator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/ic_x"
                android:hint="@string/your_phone"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="52dp"
            android:layout_weight="1"
            android:background="@drawable/ic_sign_in"
            android:onClick="@{consumerViewModel::onSignInClick}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="22dp"
            android:text="@string/dont_have_an_account"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>