<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        tools:ignore="MissingPrefix"
        android:layout_height="match_parent"
        android:id="@+id/llQueriesSuggestions"
        tools:context="com.hangloose.ui.activities.QueriesSuggestionsActivity">

    <TextView
            android:id="@+id/tvSelectionHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textSize="18sp"
            android:gravity="center"
            fontPath="fonts/segoe_ui_bold_italic.ttf"
            android:background="@color/colorBgGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/queries_suggestions"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/textUsername"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectionHeading"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editUsername"
                android:text=" "
                android:enabled="false"
                fontPath="fonts/segoe_ui.ttf"
                android:hint="@string/username"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textEmail"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textUsername"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editEmail"
                android:enabled="false"
                android:text=" "
                fontPath="fonts/segoe_ui.ttf"
                android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/textQueries"
            app:layout_constraintTop_toBottomOf="@+id/textEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editQueries"
                fontPath="fonts/segoe_ui.ttf"
                android:lines="5"
                android:hint="@string/queries"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:id="@+id/textSuggestions"
            app:layout_constraintTop_toBottomOf="@+id/textQueries"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editSuggestions"
                fontPath="fonts/segoe_ui.ttf"
                android:lines="5"
                android:hint="@string/suggestions"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:text="@string/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSend"
            app:layout_constraintEnd_toEndOf="@+id/tvSelectionHeading"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            fontPath="fonts/segoe_ui.ttf"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"
            android:background="@drawable/half_rounded_app"
            app:layout_constraintTop_toBottomOf="@+id/textSuggestions"/>


</android.support.constraint.ConstraintLayout>
