<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="resetPasswordViewModel"
            type="com.hangloose.viewmodel.ResetPasswordViewModel" />

        <variable
            name="clickHandler"
            type="com.hangloose.ui.activities.ResetActivity" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/ll_Reset_Pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{clickHandler::onOutsideTouch}"
        android:background="@drawable/img_background"
        tools:context="com.hangloose.ui.activities.ResetActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/text20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addTextChangedListener="@{resetPasswordViewModel.passwordWatcher}"
                android:backgroundTint="@android:color/white"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ilConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ilPassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:addTextChangedListener="@{resetPasswordViewModel.confirmPasswordWatcher}"
                android:backgroundTint="@android:color/white"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="onCancelClick"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ilConfirmPassword" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:background="#b51f1f"
            android:onClick="@{resetPasswordViewModel::onResetClick}"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button2"
            app:layout_constraintTop_toBottomOf="@+id/ilConfirmPassword" />

        <include
            android:id="@+id/pbLayout"
            layout="@layout/activity_progress_overlay"
            android:visibility="@{resetPasswordViewModel.isVisible? View.VISIBLE : View.GONE}" />

    </android.support.constraint.ConstraintLayout>
</layout>